--- a/File Vari/prova.html
+++ b/File Vari/prova.html
@@ -3,34 +3,32 @@
 
 <head>
 
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
+
 <title>M-Mobile</title>
-<!--<link href="">  <!--qui ci va il css-->
 <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.css" rel="stylesheet">
+<link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
- <link href="css/shop-homepage.css" rel="stylesheet">
- <link href="dropdown.css" rel="stylesheet">
+ <link href="style.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-<!--NAVBAR, provare quella di michela-->
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation"> <!--style="background-color: #0066CC"-->
+<!--NAVBAR-->
+<nav class="navbar navbar-firstnav navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-            </div>
+            
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-					<li>
+										<li>
                         <a class="active" href="#">Consumer</a>
                     </li>				
                     <li>
@@ -47,7 +45,7 @@
     </nav>
 	
 <!--AGGIUGNERE I DROPDOWN-->
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-secondnav" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -57,35 +55,43 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img alt="Brand" src="..\images\logo.png"></a>
+				<a class="navbar-brand" href="#"><img alt="Brand" src="..\images\logo.png"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <div class="dropdown">
-						<button class="dropbtn">Promotions</button>
-							<div class="dropdown-content">
-							prova prova 1 2 prova
-							</div>
-					</div>
-					<div class="dropdown">
-						<button class="dropbtn">Devices</button>
-							<div class="dropdown-content">
-							prova prova 1 2 prova
-							</div>
-					</div>
-					<div class="dropdown">
-						<button class="dropbtn">Smart Life</button>
-							<div class="dropdown-content">
-							prova prova 1 2 prova
-							</div>
-					</div>
-					<div class="dropdown">
-						<button class="dropbtn">Assistance Services</button>
-							<div class="dropdown-content">
-							prova prova 1 2 prova
-							</div>
-					</div>
+                <ul class="nav navbar-nav">					
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">Promotions</button>
+								<div class="dropdown-content">
+								prova prova 1 2 prova
+								</div>
+						</div>
+					</li>
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">Devices</button>
+								<div class="dropdown-content">
+								prova prova 1 2 prova
+								</div>
+						</div>
+					</li>
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">Smart Life</button>
+								<div class="dropdown-content">
+								prova prova 1 2 prova
+								</div>
+						</div>
+					</li>
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">Assistance Services</button>
+								<div class="dropdown-content">
+								prova prova 1 2 prova
+								</div>
+						</div>
+					</li>
 						
                 </ul>
             </div>
