--- a/File Vari/prova.html
+++ b/File Vari/prova.html
@@ -11,29 +11,28 @@
 
 <title>M-Mobile</title>
 <!-- Bootstrap Core CSS -->
-<link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
+  <link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
  <link href="style.css" rel="stylesheet">
+ 
+<!-- Bootstrap and JQuery js -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
 
-<!--NAVBAR-->
+<!--FIRST NAVBAR-->
 <nav class="navbar navbar-firstnav navbar-fixed-top" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-										<li>
+					<li>
                         <a class="active" href="#">Consumer</a>
-                    </li>				
-                    <li>
-                        <a href="#">Who We Are</a>
-                    </li>
+                    </li>	
                     <li>
                         <a href="#">The Group</a>
                     </li>
@@ -43,11 +42,12 @@
         </div>
         <!-- /.container -->
     </nav>
+<!--END FIRST NAVBAR-->
 	
-<!--AGGIUGNERE I DROPDOWN-->
+<!--SECOND NAVBAR WITH DROPDOWNS-->
 <nav class="navbar navbar-secondnav" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
+            <!-- Brand and toggle -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -62,51 +62,71 @@
                 <ul class="nav navbar-nav">					
 					<li>
 						<div class="dropdown">
-							<button class="dropbtn">Promotions</button>
+							<button class="dropbtn">PROMOTIONS</button>
+						</div>
+					</li>
+					<!-- Devices panel -->
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">DEVICES</button>
 								<div class="dropdown-content">
-								prova prova 1 2 prova
+									<a href="#">Smartphones & Cellphones </a>
+									<a href="#"> Tablets & PCs </a>
+									<a href="#"> Modem & Networking </a>
+									<a href="#"> TV & Smart Living </a>
+									<a href="#"li> Device Outlet </a>
 								</div>
 						</div>
 					</li>
+					<!-- Smart Life panel -->
 					<li>
 						<div class="dropdown">
-							<button class="dropbtn">Devices</button>
+							<button class="dropbtn">SMART LIFE</button>
 								<div class="dropdown-content">
-								prova prova 1 2 prova
+									<a href="#"> TV & Entertainment </a>
+									<a href="#"> Person </a>
+									<a href="#"> Home & Family </a>
+									<a href="#"> Health & Fitness </a>		
 								</div>
 						</div>
 					</li>
+					<!-- Assistance Service panel -->
 					<li>
 						<div class="dropdown">
-							<button class="dropbtn">Smart Life</button>
+							<button class="dropbtn">ASSISTANCE SERVICE</button>
 								<div class="dropdown-content">
-								prova prova 1 2 prova
-								</div>
-						</div>
-					</li>
-					<li>
-						<div class="dropdown">
-							<button class="dropbtn">Assistance Services</button>
-								<div class="dropdown-content">
-								prova prova 1 2 prova
+									<a href="#"> Line Management </a>
+									<a href="#"> Monitoring Costs & Payments </a>
+									<a href="#"> Technical Support </a>
+									<a href="#"> Smart Life Assistance </a>
 								</div>
 						</div>
 					</li>
 						
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+            <!-- end navbar-collapse -->
         </div>
-        <!-- /.container -->
+        <!-- end container -->
     </nav>
+<!--END SECOND NAVBAR WITH DROPDOWNS-->
 
 	
 <!--SLIDESHOW-->
 
-
-
-
-
+<!--NAVBAR FIXED BOTTOM-->
+<!--FOOTER-->
+	<div class="container">
+        <hr>
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; M-Mobile 2016</p>
+                </div>
+            </div>
+        </footer>
+    </div>
+<!--END FOOTER-->
 
 </body>
 
