Icons added to the panels.

--- a/File Vari/prova.html
+++ b/File Vari/prova.html
@@ -16,6 +16,10 @@
  <!-- Custom CSS -->
  <link href="style.css" rel="stylesheet">
  
+ <!-- Font awesome icons -->
+ 
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+ 
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -70,11 +74,11 @@
 						<div class="dropdown">
 							<button class="dropbtn">DEVICES</button>
 								<div class="dropdown-content">
-									<a href="#">Smartphones & Cellphones </a>
-									<a href="#"> Tablets & PCs </a>
-									<a href="#"> Modem & Networking </a>
-									<a href="#"> TV & Smart Living </a>
-									<a href="#"li> Device Outlet </a>
+									<a href="#"><i class="fa fa-mobile fa-4x" aria-hidden="true"></i>Smartphones & Cellphones </a>
+									<a href="#"><i class="fa fa-laptop fa-4x" aria-hidden="true"></i> Tablets & PCs </a>
+									<a href="#"><i class="fa fa-wifi fa-4x" aria-hidden="true"></i> Modem & Networking </a>
+									<a href="#"><i class="fa fa-television fa-4x" aria-hidden="true"></i> TV & Smart Living </a>
+									<a href="#"li><i class="fa fa-tag fa-4x" aria-hidden="true"></i> Device Outlet </a>
 								</div>
 						</div>
 					</li>
@@ -83,10 +87,10 @@
 						<div class="dropdown">
 							<button class="dropbtn">SMART LIFE</button>
 								<div class="dropdown-content">
-									<a href="#"> TV & Entertainment </a>
-									<a href="#"> Person </a>
-									<a href="#"> Home & Family </a>
-									<a href="#"> Health & Fitness </a>		
+									<a href="#"><i class="fa fa-television fa-4x" aria-hidden="true"></i> TV & Entertainment </a>
+									<a href="#"><i class="fa fa-street-view fa-4x" aria-hidden="true"></i> Person </a>
+									<a href="#"><i class="fa fa-home fa-4x" aria-hidden="true"></i> Home & Family </a>
+									<a href="#"><i class="fa fa-heartbeat fa-4x" aria-hidden="true"></i> Health & Fitness </a>		
 								</div>
 						</div>
 					</li>
@@ -95,10 +99,10 @@
 						<div class="dropdown">
 							<button class="dropbtn">ASSISTANCE SERVICE</button>
 								<div class="dropdown-content">
-									<a href="#"> Line Management </a>
-									<a href="#"> Monitoring Costs & Payments </a>
-									<a href="#"> Technical Support </a>
-									<a href="#"> Smart Life Assistance </a>
+									<a href="#"><i class="fa fa-phone fa-4x" aria-hidden="true"></i> Line Management </a>
+									<a href="#"><i class="fa fa-credit-card fa-4x" aria-hidden="true"></i> Monitoring Costs & Payments </a>
+									<a href="#"><i class="fa fa-cogs fa-4x" aria-hidden="true"></i> Technical Support </a>
+									<a href="#"><i class="fa fa-envira fa-4x" aria-hidden="true"></i>Smart Life Assistance </a>
 								</div>
 						</div>
 					</li>
