--- a/File Vari/testdev.html
+++ b/File Vari/testdev.html
@@ -24,9 +24,10 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="jquery.js"></script>
+  <script src="slider.js"></script>
   <script type="text/javascript" src="slider/js/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="slider/js/jssor.slider.mini.js"></script>
+  <script src="responsivecarousel.js"></script>
   
  <script>
  $(function () {
@@ -222,15 +223,85 @@
         <span data-u="arrowleft" class="jssora22l" style="top:0px;left:12px;width:40px;height:58px;" data-autocenter="2"></span>
         <span data-u="arrowright" class="jssora22r" style="top:0px;right:12px;width:40px;height:58px;" data-autocenter="2"></span>
     </div>
+
+<!--NEW DEVICES-->
+	<div class="container">
+		<div class="col-md-12">
+			<div class="carousel slide" id="myCarousel">
+			  <div class="carousel-inner">
+					<div class="item active">
+						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+							<a href="#">
+								<h3> Samsung </h3>
+								<span> Galaxy S7 </span>
+								<img src="../images/samsung-galaxyS7.png" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+							<a href="#">
+								<h3> Apple </h3>
+								<span> Iphone SE 16GB </span>
+								<img src="../images/iphoneSE16GB.png" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+							<a href="#">
+								<h3> Huawei </h3>
+								<span> P9 </span>
+								<img src="../images/huawei-p9.jpg" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+							<a href="#">
+								<h3> LG </h3>
+								<span> G5 </span>
+								<img src="../images/lg-g5.png" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+							<a href="#">
+								<h3> Sony </h3>
+								<span> Xperia X </span>
+								<img src="../images/SonyExperiaX.jpg" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+							<a href="#">
+								<h3> Apple </h3>
+								<span> Iphone 6s </span>
+								<img src="../images/iPhone6s.jpg" class="img-responsive">
+							</a>
+						</div>
+					</div>
+			  </div>
+			  <a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+			  <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+			</div>
+		</div>
+	</div>
 	
+<!--SPOTIFY AD-->
+	<div class="adv">
+		<span>
+			<h3> Spotify Premium </h3>
+			<span>Subscribe to Spotify with us, you have access to milions of tracks, themed playlists and much more, at a great discount!
+			</span> <br>
+			<button type="button"> More details </button>
+		</span>
+		<img src="../images/girl-music.jpg" alt="">
+	</div>
 <!--NAVBAR FIXED BOTTOM-->
-<!--FOOTER-->
-	<div class="footer">
-        <footer>
-            <p>Copyright &copy; M-Mobile 2016</p>
-        </footer>
-    </div>
-<!--END FOOTER-->
+
 
 </body>
 
