A few fixes in the device slider.

--- a/File Vari/testdev.html
+++ b/File Vari/testdev.html
@@ -238,7 +238,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="item">
+					<div class="item active">
 						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
 							<a href="#">
 								<h3> Apple </h3>
@@ -247,7 +247,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="item">
+					<div class="item active">
 						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
 							<a href="#">
 								<h3> Huawei </h3>
