--- a/File Vari/old.html
+++ b/File Vari/old.html
@@ -15,7 +15,7 @@
   <link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
- <link href="style2.css" rel="stylesheet">
+ <link href="style.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
@@ -29,7 +29,12 @@
   <script type="text/javascript" src="slider/js/jssor.slider.mini.js"></script>
   <script src="responsivecarousel.js"></script>
   
- </head>
+
+  
+  
+  
+  
+</head>
 
 <body>
 
@@ -50,9 +55,10 @@
         <!-- /.container -->
 </nav>
 <!--END FIRST NAVBAR-->
-
-<!--SECOND NAVBAR-->
-<nav class="navbar navbar-secondnav navbar-fixed-top" role="navigation">
+		
+	
+<!--SECOND NAVBAR WITH DROPDOWNS-->
+<nav class="navbar navbar-secondnav" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -66,49 +72,125 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-                <ul class="nav navbar-nav">
-					<li><a href="#">Promotions</a></li>
-					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Devices</a>
-							<ul class="dropdown-menu">
-								<li><a class="menu-title" href="#">All Devices</a></li>
-								<li><a href="#">Smartphones & Cellphones</a></li>
-								<li><a href="#">Tablets & PCs</a></li>
-								<li><a href="#">Modem & Networking</a></li>
-								<li><a href="#">TV & Smart Living</a></li>
-								<li><a href="#">Outlet</a></li>								
-							</ul>
+                <ul class="nav navbar-nav">					
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">Promotions</button>
+						</div>
 					</li>
-					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Smart Life</a>
-							<ul class="dropdown-menu">
-								<li><a class="menu-title" href="#">All SL Services</a></li>
-								<li><a href="#">TV & Entertainment</a></li>
-								<li><a href="#">Person</a></li>
-								<li><a href="#">Home & Family</a></li>
-								<li><a href="#">Health & Fitness</a></li>						
-							</ul>
+					<!-- Devices panel -->
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">Devices</button>
+								<div class="dropdown-content">
+									<div class="container">
+										<div class="row"><h3> Categories: </h3></div>
+										<div class="row">
+										<div class="col-sm-offset-2 col-sm-2 col-xs-12 clearfix">
+											<a href="#" style=""><i class="fa fa-mobile fa-4x" aria-hidden="true"></i>
+												<div>Smartphones & Cellphones</div>
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix ">
+											<a href="#"><i class="fa fa-laptop fa-4x" aria-hidden="true"></i> 
+												<div>Tablets & PCs </div>
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">
+											<a href="#" ><i class="fa fa-wifi fa-4x" aria-hidden="true"></i>  
+												<div>Modem & Networking </div>
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">
+											<a href="#" ><i class="fa fa-television fa-4x" aria-hidden="true"></i>  
+												<div>TV & Smart Living </div>
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">
+											<a href="#" ><i class="fa fa-tag fa-4x" aria-hidden="true"></i>  
+												<div>Device Outlet </div>
+											</a>
+										</div>
+										</div>
+									</div>
+								</div>
+						</div>
 					</li>
-					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Assistance Service</a>
-							<ul class="dropdown-menu">
-								<li><a class="menu-title" href="#">All Assistance Services</a></li>
-								<li><a href="#">Line Management</a></li>
-								<li><a href="#">Monitoring Costs & Payments</a></li>
-								<li><a href="#">Technical Support</a></li>
-								<li><a href="#">Smart Life Assistance</a></li>							
-							</ul>
+					<!-- Smart Life panel -->
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">Smart Life</button>
+								<div class="dropdown-content">
+									<div class="container">
+										<div class="row"><h3> Categories: </h3></div>
+										<div class="row">
+										<div class="col-sm-offset-2 col-sm-2 col-xs-12 clearfix">
+											<a href="#"><i class="fa fa-television fa-4x" aria-hidden="true"></i>
+												<div> TV & Entertainment</div> 
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">
+											<a href="#"><i class="fa fa-street-view fa-4x" aria-hidden="true"></i>
+												<div>Person</div>
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">									
+											<a href="#"><i class="fa fa-home fa-4x" aria-hidden="true"></i>
+												<div>Home & Family</div>
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">
+											<a href="#"><i class="fa fa-heartbeat fa-4x" aria-hidden="true"></i>
+												<div>Health & Fitness</div>
+											</a>
+										</div>
+										</div>
+									</div>
+								</div>
+						</div>
+					</li>
+					<!-- Assistance Service panel -->
+					<li>
+						<div class="dropdown">
+							<button class="dropbtn">Assistance Service</button>
+								<div class="dropdown-content">
+									<div class="container">
+										<div class="row"><h3> Categories: </h3></div>
+										<div class="row">
+										<div class="col-sm-offset-2 col-sm-2 col-xs-12 clearfix">
+											<a href="#"><i class="fa fa-phone fa-4x" aria-hidden="true"></i>
+												<div>Line Management</div> 
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">
+											<a href="#"><i class="fa fa-credit-card fa-4x" aria-hidden="true"></i>
+												<div>Monitoring Costs & Payments</div>
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">									
+											<a href="#"><i class="fa fa-cogs fa-4x" aria-hidden="true"></i>
+												<div>Technical Support</div>
+											</a>
+										</div>
+										<div class="col-sm-2 col-xs-12 clearfix">
+											<a href="#"><i class="fa fa-envira fa-4x" aria-hidden="true"></i>
+												<div>Smart Life Assistance</div>
+											</a>
+										</div>	
+										</div>
+									</div>
+								</div>
+						</div>
 					</li>
 				</ul>
-			</div>
-		</div>
-</nav>
-				
-
-
-<!--END NAVBAR-->
+            </div>
+            <!-- end navbar-collapse -->
+        </div>
+        <!-- end container -->
+    </nav>
+<!--END SECOND NAVBAR WITH DROPDOWNS-->
 <!--SLIDESHOW-->
- <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 300px; overflow: hidden; visibility: hidden;">
+ <div id="jssor_1" style="position: relative; margin: 0 auto; top: -20px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
             <div data-p="225.00" style="display: none;">
@@ -130,7 +212,6 @@
 
 <!--NEW DEVICES-->
 	<div class="container">
-		<div class="col-md-12">
 			<div class="carousel slide" id="myCarousel">
 			  <div class="carousel-inner">
 					<div class="item active">
@@ -146,7 +227,7 @@
 						<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
 							<a href="#">
 								<h3> Apple </h3>
-								<div> Iphone SE 16GB </div>
+								<div> Iphone SE</div>
 								<img src="../images/iphoneSE16GB.png" class="img-responsive">
 							</a>
 						</div>
@@ -191,7 +272,6 @@
 			  <a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
 			  <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
 			</div>
-		</div>
 	</div>
 	
 <!--SPOTIFY AD-->
