Fixes for the Navbars

--- a/File Vari/testdev.html
+++ b/File Vari/testdev.html
@@ -35,8 +35,7 @@
 
 <!--FIRST NAVBAR-->
 <nav class="navbar navbar-firstnav navbar-fixed-top" role="navigation">
-        <div class="container"> 
-			<div class="collapse navbar-collapse">
+        <div class="container">
 				<ul class="nav navbar-nav">
 					<li>
 						<a class="active" href="#">Consumer</a>
@@ -45,7 +44,6 @@
 						<a href="#">The Group</a>
 					</li>
 				</ul>
-			</div>
 		</div>
         <!-- /.container -->
 </nav>
@@ -108,14 +106,17 @@
 
 <!--END NAVBAR-->
 <!--SLIDESHOW-->
- <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 300px; overflow: hidden; visibility: hidden;">
+ <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 400px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
-        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 400px; overflow: hidden;">
             <div data-p="225.00" style="display: none;">
                 <img data-u="image" src="../images/slide1.png" />
             </div>
             <div data-p="225.00" data-po="80% 55%" style="display: none;">
                 <img data-u="image" src="../images/slide2.jpg" />
+            </div>
+			<div data-p="225.00" data-po="80% 55%" style="display: none;">
+                <img data-u="image" src="../images/slide4.jpg" />
             </div>
         </div>
         <!-- Bullet Navigator -->
@@ -131,6 +132,7 @@
 <!--NEW DEVICES-->
 	<div class="container">
 		<div class="col-md-12">
+			<div class="carousel-title">New devices</div>
 			<div class="carousel slide" id="myCarousel">
 			  <div class="carousel-inner">
 					<div class="item active">
@@ -195,22 +197,22 @@
 	</div>
 	
 <!--SPOTIFY AD-->
-	<div class="adv">
-		<div>
-			<h3> Spotify Premium </h3>
-			<div>Subscribe to Spotify with us, you have access to milions of <br>tracks, themed playlists and much more, at a great discount!
-			</div> <br>
-			<button type="button"> More details </button>
+	<div class="container">
+		<div class="adv">
+			<div>
+				<h3> Spotify Premium </h3>
+				<div>Subscribe to Spotify with us, you have access to milions of <br>tracks, themed playlists and much more, at a great discount!
+				</div> <br>
+				<button type="button"> More details </button>
+			</div>
+			<img src="../images/girl-music.jpg" class="img-responsive">
 		</div>
-		<img src="../images/girl-music.jpg" class="img-responsive">
 	</div>
 
 <!--FOOTER-->
 	<div class="footer">
-        <footer>
-            <p>Copyright &copy; M-Mobile 2016</p>
-        </footer>
-    </div>
+		<p>Copyright &copy; M-Mobile 2016</p>
+	</div>
 <!--END FOOTER-->
 </body>
 
