Static html pages and style of The Group part.

--- a/File Vari/testdev.html
+++ b/File Vari/testdev.html
@@ -230,7 +230,7 @@
 			<div>
 				<h3> Spotify Premium </h3>
 				<div class="advtext">Subscribe to Spotify with us, you have access to milions of tracks, themed playlists and much more, at a great discount!
-				</div> <br>
+				</div> 
 				
 				<div class="row">
 					<div class="col three">				
