Smartlifeservices page over.

--- a/File Vari/smartlifeservices.html
+++ b/File Vari/smartlifeservices.html
@@ -77,7 +77,7 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle active" data-toggle="dropdown" href="#">Smart Life</a>
 							<ul class="dropdown-menu">
-								<li><a class="menu-title" href="#">All SL Services</a></li>
+								<li class="active"><a class="menu-title" href="#">All SL Services</a></li>
 								<li><a href="#">TV & Entertainment</a></li>
 								<li><a href="#">Person</a></li>
 								<li><a href="#">Home & Family</a></li>
@@ -103,7 +103,8 @@
 
 <!-- SMART LIFE CATEGORIES-->
 	<div class="allsmartlife">
-			<div class="tvandentertainment" style="background-image:url(../images/tvandentertainment2.jpg); background-repeat: no-repeat;">
+			<div class="tvandentertainment">
+				<img src="../images/tvandentertainment2.jpg">
 				<div class="textandbutton">
 					<h3> TV & ENTERTAINMENT</h3>
 					<p> Discover your favourite form of entertainment.</br> The fun begins now! </p>
@@ -118,9 +119,7 @@
 				<img src="../images/person2.jpg">
 				<div class="textandbutton">
 					<h3> PERSON</h3>
-					<p> A new approach to the world of e-payment and digital ID.</br>
-						You will be able to organize and manage your digital payments, you personal archive,
-						store passwords, invoices, bills and medical referts. </p>
+					<p> Organize and manage your digital payments: a new approach to the world of e-payment and digital ID!</p>
 					<div class="row">
 						<div class="col three">				
 							<a href="#" class="btn btn-blue"> Discover </a>			
@@ -144,9 +143,7 @@
 				<img src="../images/healthandfitness2.png">
 				<div class="textandbutton">
 					<h3> HEALTH & FITNESS </h3>
-					<p> Discover how health and fitness can improve your life.</br>
-						Share with your friends your fitness results.</br>
-						The future is smart. </p>
+					<p> Discover how health and fitness can improve your life and share it with your friends! </p>
 					<div class="row">
 						<div class="col three">				
 							<a href="#" class="btn btn-blue">Discover </a>			
