Separated files for inclusion.

--- a/File Vari/investors.html
+++ b/File Vari/investors.html
@@ -81,7 +81,7 @@
 			<img src="../images/shareholdersgraphic.jpg">
 			
 			<h3><b> CONSOLIDATED OPERATING AND FINANCIAL DATA</b></h3>
-			<img src="../images/shareholderstable.jpg">
+			<img src="../images/financialsdata.jpg">
 		</div>
 	</div>
 	
