--- a/File Vari/smartlifeservices.html
+++ b/File Vari/smartlifeservices.html
@@ -116,7 +116,7 @@
 				</div>
 			</div>
 			<div class="person">
-				<img src="../images/person2.jpg">
+				<img src="../images/epayment.jpg">
 				<div class="textandbutton">
 					<h3> PERSON</h3>
 					<p> Organize and manage your digital payments: a new approach to the world of e-payment and digital ID!</p>
